--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a{
     max-height: 500vh;
     background-color:#000000;
     position: relative;
-    background-image: url(./portfolio-files/web.png);
+    background-image: url(./portfolio-files/web2.png);
     background-repeat: no-repeat;
     background-size: cover ;
     background-position: right bottom;
